...
    
    private lazy var logoutButton: UIButton = {
        let button = UIButton()
        button.setImage(UIImage(named: "Exit"), for: .normal)
        button.tintColor = .white
        button.translatesAutoresizingMaskIntoConstraints = false
        button.accessibilityIdentifier = "LogoutButton"
        return button
    }()
    
    // MARK: - Properties
    var presenter: ProfilePresenterProtocol?
    
...
            title: "Пока, пока!",
            message: "Уверены что хотите выйти?",
            preferredStyle: .alert
        )
        
        alert.addAction(UIAlertAction(
            title: "Да",
            style: .default
        ) { [weak self] _ in
            guard let presenter = self?.presenter as? ProfilePresenter else { return }
            presenter.confirmLogout()
        })
        
...
